traces/bug_394.txt
src/fflib/problem.cpp:386: error: DEAD_STORE
  The value written to &sameMesh (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:386:5: Write of unused value
384.        
385.       const Mesh & ThI = Th;//* GetAny<pmesh>( (* di.Th)(stack));
386.       bool sameMesh = &ThI == &Vh.Th &&  &ThI == &Uh.Th;
           ^
387.       
388.   //    const QuadratureFormular1d & FIE = di.FIE(stack);
